--- a/src/IAmBacon/IAmBacon/Views/Post/Details.cshtml
+++ b/src/IAmBacon/IAmBacon/Views/Post/Details.cshtml
@@ -65,6 +65,7 @@
     <h1>Leave a Comment</h1>
     @using (Html.BeginForm("SaveComment", "Post", FormMethod.Post, new { @class = "comment-form" }))
     {
+        @Html.AntiForgeryToken()
         @Html.HiddenFor(x => x.Id)
         @Html.HiddenFor(x => x.Title)
         @Html.LabelFor(x => x.NewComment.Name)
