--- a/src/IAmBacon/IAmBacon/Content/sass/base/mixins/_line-height.scss
+++ b/src/IAmBacon/IAmBacon/Content/sass/base/mixins/_line-height.scss
@@ -3,6 +3,8 @@
 // For calculating line height values
 // --------------------------------------------------
 
+// Sets the line-height in proportion to the font-size.
 @mixin line-height-proportional($line-height: $base-line-height, $font-size: $base-font-size) {	
 	line-height: $line-height / $font-size;
 }
+
