--- a/src/IAmBacon/IAmBacon/Content/sass/base/_typography.scss
+++ b/src/IAmBacon/IAmBacon/Content/sass/base/_typography.scss
@@ -2,17 +2,11 @@
 // Typography variables.
 // --------------------------------------------------
 
-// These 3 variables are copies of ones used in Compass' Vertical Rhythm module.
-
 // The base font size.
 $base-font-size: 16px;
 
 // The base line height determines the basic unit of vertical rhythm.
 $base-line-height: 24px;
-
-// The length unit in which to output vertical rhythm values.
-// Supported values: px, em, rem.
-$rhythm-unit: 'em';
 
 // The default font family.
 $base-font-family: 'Lato', sans-serif !default;
@@ -22,10 +16,10 @@ $base-color: $black;
 $base-background-color: $white;
 
 // The font sizes for h1-h6.
-$h1-font-size: 3.75 * $base-font-size !default;
-$h2-font-size: 3	* $base-font-size !default;
-$h3-font-size: 1.5	* $base-font-size !default;
-$h4-font-size: 1    * $base-font-size !default;
+$h1-font-size: 3.75 * $base-font-size !default; //60px
+$h2-font-size: 3	* $base-font-size !default; //46px
+$h3-font-size: 1.5	* $base-font-size !default; //24px
+$h4-font-size: 1    * $base-font-size !default; //16px
 $h5-font-size: 0.83 * $base-font-size !default;
 $h6-font-size: 0.67 * $base-font-size !default;
 
