--- a/src/IAmBacon/IAmBacon/Views/Shared/_PostLayout.cshtml
+++ b/src/IAmBacon/IAmBacon/Views/Shared/_PostLayout.cshtml
@@ -20,7 +20,7 @@
 <body>
     <div class="wrapper">
         <header class="header">
-            <h1>@Html.ActionLink("I am Bacon.", "Index", "Home")</h1>
+            <h2 class="h1">@Html.ActionLink("I am Bacon.", "Index", "Home")</h2>
             <a href="http://feeds.feedburner.com/iambacon" title="Subscribe to my blog">Subscribe to my blog</a>
         </header>
         <main class="content" role="main">
