--- a/src/IAmBacon/IAmBacon/Content/sass/partials/_html-body.scss
+++ b/src/IAmBacon/IAmBacon/Content/sass/partials/_html-body.scss
@@ -10,7 +10,8 @@ body {
 	@include font-size($base-font-size);
 }
 
-h1 {	
+h1,
+.h1 {	
 	@include font-size($h1-font-size-mobile);
 
 	@include media-min($min-width-541px) {
