--- a/src/IAmBacon/IAmBacon/Content/stylesheets/post-ie.css
+++ b/src/IAmBacon/IAmBacon/Content/stylesheets/post-ie.css
@@ -13,15 +13,16 @@ body {
   font-size: 1.4rem;
 }
 
-/* line 13, ../sass/partials/_html-body.scss */
-h1 {
+/* line 14, ../sass/partials/_html-body.scss */
+h1,
+.h1 {
   font-size: 21px;
   font-size: 2.1rem;
   font-size: 31.5px;
   font-size: 3.15rem;
 }
 
-/* line 21, ../sass/partials/_html-body.scss */
+/* line 22, ../sass/partials/_html-body.scss */
 h2 {
   font-size: 17.5px;
   font-size: 1.75rem;
@@ -29,21 +30,21 @@ h2 {
   font-size: 2.1rem;
 }
 
-/* line 30, ../sass/partials/_html-body.scss */
+/* line 31, ../sass/partials/_html-body.scss */
 ul,
 ol {
   list-style-type: none;
   padding-left: 0;
 }
 
-/* line 36, ../sass/partials/_html-body.scss */
+/* line 37, ../sass/partials/_html-body.scss */
 label,
 input[type=submit] {
   display: block;
   margin-top: 1em;
 }
 
-/* line 44, ../sass/partials/_html-body.scss */
+/* line 45, ../sass/partials/_html-body.scss */
 input[type=text],
 input[type=email],
 input[type=url],
@@ -56,31 +57,31 @@ textarea {
   box-sizing: border-box;
 }
 
-/* line 53, ../sass/partials/_html-body.scss */
+/* line 54, ../sass/partials/_html-body.scss */
 input[type=text],
 input[type=email],
 input[type=url] {
   height: 2em;
 }
 
-/* line 58, ../sass/partials/_html-body.scss */
+/* line 59, ../sass/partials/_html-body.scss */
 textarea {
   height: 7em;
   padding-top: 0.5em;
   padding-bottom: 0.5em;
 }
 
-/* line 64, ../sass/partials/_html-body.scss */
+/* line 65, ../sass/partials/_html-body.scss */
 a {
   text-decoration: none;
   color: inherit;
 }
-/* line 68, ../sass/partials/_html-body.scss */
+/* line 69, ../sass/partials/_html-body.scss */
 a:hover {
   color: #63b7f6;
 }
 
-/* line 73, ../sass/partials/_html-body.scss */
+/* line 74, ../sass/partials/_html-body.scss */
 blockquote {
   font-family: Georgia, serif;
   font-style: italic;
@@ -88,21 +89,21 @@ blockquote {
   font-size: 1.75rem;
 }
 
-/* line 79, ../sass/partials/_html-body.scss */
+/* line 80, ../sass/partials/_html-body.scss */
 .wrapper {
   margin: 0 auto;
   text-align: left;
   max-width: 1440px;
 }
 
-/* line 86, ../sass/partials/_html-body.scss */
+/* line 87, ../sass/partials/_html-body.scss */
 .content,
 .header {
   margin-left: 30px;
   margin-right: 30px;
 }
 
-/* line 91, ../sass/partials/_html-body.scss */
+/* line 92, ../sass/partials/_html-body.scss */
 .link {
   text-decoration: underline;
 }
