Site redesign: Updated site to use Lato font.

--- a/src/IAmBacon/IAmBacon/Content/sass/partials/_base.scss
+++ b/src/IAmBacon/IAmBacon/Content/sass/partials/_base.scss
@@ -4,9 +4,9 @@ $html-font-size-percentage: 62.5%;
 $body-gutter: 30px;
 
 // Base font
-$base-font-family: Verdana, Tahoma, Arial;
+$base-font-family: 'Lato', sans-serif !default;
 $base-font-weight: normal;
-$base-font-size: 14px;
+$base-font-size: 16px;
 
 $base-line-height: 2;
 $base-padding: $base-font-size;
