--- a/src/IAmBacon/IAmBacon/Views/Shared/_Footer.cshtml
+++ b/src/IAmBacon/IAmBacon/Views/Shared/_Footer.cshtml
@@ -14,7 +14,7 @@
                     @Html.DisplayFor(x => Model.PopularPosts)
                 </ol>
             </div>
-            <div class="linksList-items linksList-items--social cb">
+            <div class="linksList-items linksList-items--social">
                 <h3 class="h3 m-tb--full">Let's be social</h3>
                 <ul class="listInline m-b--full">
                     <li>
