--- a/src/IAmBacon/IAmBacon/Content/sass/utilities/_typography.scss
+++ b/src/IAmBacon/IAmBacon/Content/sass/utilities/_typography.scss
@@ -27,8 +27,20 @@
 	@include line-height-proportional;
 }
 
+// hides text for when you want to replace it with an image or icon.
 .hideText {
 	text-indent: 100%;
 	white-space: nowrap;
 	overflow: hidden;
+}
+
+// Hides text but not for screen readers.
+.visuallyHidden {
+  position: absolute !important;
+  overflow: hidden !important;
+  width: 1px !important;
+  height: 1px !important;
+  padding: 0 !important;
+  border: 0 !important;
+  clip: rect(1px, 1px, 1px, 1px) !important;
 }
