Site redesign: removed active state from header nav

--- a/src/IAmBacon/IAmBacon/Views/Shared/_Header.cshtml
+++ b/src/IAmBacon/IAmBacon/Views/Shared/_Header.cshtml
@@ -5,7 +5,7 @@
         <nav class="header-nav">
             <h3 class="visuallyHidden">Site navigation</h3>
             <ul class="listInline">
-                <li class="header-nav-link is-active">@Html.ActionLink("Home", "Index", "Home")</li>
+                <li class="header-nav-link">@Html.ActionLink("Home", "Index", "Home")</li>
                 <li class="header-nav-link">@Html.ActionLink("Blog", "Index", "Post")</li>
             </ul>
         </nav>
