Site redesign: Add page title to homepage

--- a/src/IAmBacon/IAmBacon/Views/Home/Home.cshtml
+++ b/src/IAmBacon/IAmBacon/Views/Home/Home.cshtml
@@ -11,8 +11,13 @@
 {
 
 }
+<div class="pageTitle">
+    <h1 class="layoutContainer layoutContainer--visible triangle">
+        <span class="pageTitle-text">Hi I'm Colin</span>
+    </h1>
+</div>
 <div class="layoutContainer">
-    <p class="intro">
+    <p class="intro-desc">
         <span class="intro-block">I am a web developer.</span> <span class="intro-block">I am a ski instructor.</span> <span class="intro-block">I am not related to Kevin Bacon.</span>
         <span class="intro-block">This is my <a class="intro-link" title="Blog for Colin Bacon" href="/blog">blog.</a></span>
     </p>
