--- a/src/IAmBacon/IAmBacon/Content/sass/pages/home/home.scss
+++ b/src/IAmBacon/IAmBacon/Content/sass/pages/home/home.scss
@@ -26,7 +26,47 @@ body {
 	}
 }
 
-.intro {
+.pageTitle {
+	background-color: $cursive;
+	position: relative;
+}
+
+.pageTitle-text {
+	@include font-size($h1-font-size);
+	@include line-height-proportional;
+	color: $marshmallow;
+	font-weight: 700;
+	margin: 0;
+	padding-top: $base-line-height;
+	padding-bottom: $base-line-height;
+	text-align: center;
+	display: block;
+
+	@include respond-to(extra-small) {
+		@include font-size($h2-font-size);
+	}
+}
+
+.triangle {
+	position: relative;
+
+	&:after {
+		content: "";
+		position: absolute;
+		bottom: -24px;
+		left: 80px;
+		border-width: 24px 24px 0;
+		border-style: solid;
+		border-color: $cursive transparent;
+
+		@include respond-to(extra-small) {
+			border-width: 18px 18px 0;
+			bottom: -18px;
+		}
+	}
+}
+
+.intro-desc {
 	@include font-size(50px);
 	@include line-height-proportional;
 	margin-bottom: $base-line-height;
@@ -98,6 +138,10 @@ body {
 	overflow: hidden;
 	padding-left: $base-line-height * 0.5;
 	padding-right: $base-line-height * 0.5;
+}
+
+.layoutContainer--visible {
+	overflow: visible;
 }
 
 .linksList {
