--- a/src/IAmBacon/IAmBacon/Content/stylesheets/pages/home/home-ie.css
+++ b/src/IAmBacon/IAmBacon/Content/stylesheets/pages/home/home-ie.css
@@ -629,61 +629,108 @@ blockquote {
 }
 
 /* line 29, ../../../sass/pages/home/home.scss */
-.intro {
+.pageTitle {
+  background-color: #83d6de;
+  position: relative;
+}
+
+/* line 34, ../../../sass/pages/home/home.scss */
+.pageTitle-text {
+  font-size: 60px;
+  line-height: 1.5;
+  color: #fffff7;
+  font-weight: 700;
+  margin: 0;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  text-align: center;
+  display: block;
+}
+@media only screen and (max-width: 767px) {
+  /* line 34, ../../../sass/pages/home/home.scss */
+  .pageTitle-text {
+    font-size: 48px;
+  }
+}
+
+/* line 50, ../../../sass/pages/home/home.scss */
+.triangle {
+  position: relative;
+}
+/* line 53, ../../../sass/pages/home/home.scss */
+.triangle:after {
+  content: "";
+  position: absolute;
+  bottom: -24px;
+  left: 80px;
+  border-width: 24px 24px 0;
+  border-style: solid;
+  border-color: #83d6de transparent;
+}
+@media only screen and (max-width: 767px) {
+  /* line 53, ../../../sass/pages/home/home.scss */
+  .triangle:after {
+    border-width: 18px 18px 0;
+    bottom: -18px;
+  }
+}
+
+/* line 69, ../../../sass/pages/home/home.scss */
+.intro-desc {
   font-size: 50px;
   line-height: 1.5;
   margin-bottom: 24px;
   margin-top: 24px;
 }
 @media only screen and (max-width: 767px) {
-  /* line 29, ../../../sass/pages/home/home.scss */
-  .intro {
+  /* line 69, ../../../sass/pages/home/home.scss */
+  .intro-desc {
     font-size: 26.8px;
   }
 }
 
-/* line 40, ../../../sass/pages/home/home.scss */
+/* line 80, ../../../sass/pages/home/home.scss */
 .intro-block {
   display: block;
   padding-left: 5px;
 }
 
-/* line 45, ../../../sass/pages/home/home.scss */
+/* line 85, ../../../sass/pages/home/home.scss */
 .intro-link {
   text-decoration: underline;
   color: #83d6de;
 }
 
-/* line 50, ../../../sass/pages/home/home.scss */
+/* line 90, ../../../sass/pages/home/home.scss */
 .header {
   border-bottom: 10px solid #60646d;
 }
 @media only screen and (max-width: 767px) {
-  /* line 50, ../../../sass/pages/home/home.scss */
+  /* line 90, ../../../sass/pages/home/home.scss */
   .header {
     border-bottom-width: 5px;
   }
 }
 
-/* line 58, ../../../sass/pages/home/home.scss */
+/* line 98, ../../../sass/pages/home/home.scss */
 .header-logo {
   font-size: 48px;
   color: #60646d;
   float: left;
 }
 @media only screen and (max-width: 767px) {
-  /* line 58, ../../../sass/pages/home/home.scss */
+  /* line 98, ../../../sass/pages/home/home.scss */
   .header-logo {
     font-size: 24px;
   }
 }
 
-/* line 68, ../../../sass/pages/home/home.scss */
+/* line 108, ../../../sass/pages/home/home.scss */
 .header-nav {
   float: right;
 }
 
-/* line 72, ../../../sass/pages/home/home.scss */
+/* line 112, ../../../sass/pages/home/home.scss */
 .header-nav-link {
   font-size: 18px;
   line-height: 4;
@@ -691,31 +738,27 @@ blockquote {
   margin-left: 24px;
 }
 @media only screen and (max-width: 767px) {
-  /* line 72, ../../../sass/pages/home/home.scss */
+  /* line 112, ../../../sass/pages/home/home.scss */
   .header-nav-link {
     line-height: 2;
   }
 }
-/* line 82, ../../../sass/pages/home/home.scss */
-.header-nav-link.is-active {
-  color: #97ce68;
-}
-/* line 86, ../../../sass/pages/home/home.scss */
+/* line 122, ../../../sass/pages/home/home.scss */
 .header-nav-link:first-child {
   margin-left: 0;
 }
 
-/* line 91, ../../../sass/pages/home/home.scss */
+/* line 127, ../../../sass/pages/home/home.scss */
 .footer {
   color: #fffff7;
 }
 
-/* line 95, ../../../sass/pages/home/home.scss */
+/* line 131, ../../../sass/pages/home/home.scss */
 .footer-copyright {
   text-align: center;
 }
 
-/* line 99, ../../../sass/pages/home/home.scss */
+/* line 135, ../../../sass/pages/home/home.scss */
 .layoutContainer {
   max-width: 1000px;
   margin: 0 auto;
@@ -724,7 +767,12 @@ blockquote {
   padding-right: 12px;
 }
 
-/* line 107, ../../../sass/pages/home/home.scss */
+/* line 143, ../../../sass/pages/home/home.scss */
+.layoutContainer--visible {
+  overflow: visible;
+}
+
+/* line 147, ../../../sass/pages/home/home.scss */
 .linksList {
   box-sizing: border-box;
 }
@@ -739,7 +787,7 @@ blockquote {
 }
 
 @media only screen and (max-width: 767px) {
-  /* line 111, ../../../sass/pages/home/home.scss */
+  /* line 151, ../../../sass/pages/home/home.scss */
   .linksList-items {
     float: left;
     width: 100%;
@@ -749,7 +797,7 @@ blockquote {
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
-  /* line 111, ../../../sass/pages/home/home.scss */
+  /* line 151, ../../../sass/pages/home/home.scss */
   .linksList-items {
     float: left;
     width: 48.85057%;
@@ -762,7 +810,7 @@ blockquote {
   }
 }
 @media only screen and (min-width: 992px) {
-  /* line 111, ../../../sass/pages/home/home.scss */
+  /* line 151, ../../../sass/pages/home/home.scss */
   .linksList-items {
     float: left;
     width: 31.80077%;
@@ -776,32 +824,32 @@ blockquote {
 }
 
 @media only screen and (min-width: 992px) {
-  /* line 125, ../../../sass/pages/home/home.scss */
+  /* line 165, ../../../sass/pages/home/home.scss */
   .linksList-items--posts {
     padding-left: 12px;
     padding-right: 12px;
   }
-  /* line 130, ../../../sass/pages/home/home.scss */
+  /* line 170, ../../../sass/pages/home/home.scss */
   .linksList-items--posts:first-child {
     padding-left: 0;
   }
 }
 
 @media only screen and (min-width: 992px) {
-  /* line 136, ../../../sass/pages/home/home.scss */
+  /* line 176, ../../../sass/pages/home/home.scss */
   .linksList-items--social {
     text-align: right;
   }
 }
 
-/* line 142, ../../../sass/pages/home/home.scss */
+/* line 182, ../../../sass/pages/home/home.scss */
 .linksList-item {
   border-bottom: 1px solid rgba(153, 153, 153, 0.8);
   padding-top: 24px;
   padding-bottom: 12px;
 }
 
-/* line 148, ../../../sass/pages/home/home.scss */
+/* line 188, ../../../sass/pages/home/home.scss */
 .linksList-link {
   color: #fffff7;
   overflow: hidden;
